--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
+    "connect-mongodb-session": "^1.4.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
+    "moment": "^2.19.3",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.5",
     "morgan": "~1.9.0",
