--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
-    "moment": "^2.19.3",
+    "moment": "^2.19.4",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.7",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "lodash": "^4.17.4",
+    "mocha": "^4.0.1"
   }
 }
